# sparrow

./: Cargo.toml
src/: data_dictionary.rs  lib.rs  query.rs  term_dictionary.rs  tokenize.rs  tsvector.rs
