[package]
name = "sparrow"
version = "0.1.0"
authors = ["karl <karl@torchbox.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.3"
serde = "1.0.110"
serde_derive = "1.0.110"
serde_json = "1.0.53"
bincode = "1.2.1"
